--- a/index.html
+++ b/index.html
@@ -11,19 +11,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Best Shop</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="./css/reset.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap"
+          rel="stylesheet">
 </head>
 <body>
+<header class="page-header">
 
-<main></main>
+    <div class="container page-header-content">
 
-<footer></footer>
+        <a class="page-logo" href="/">BestShop</a>
+
+        <nav class="page-nav">
+            <ul class="page-nav-list">
+                <li><a href="#">Why us</a></li>
+                <li><a href="#">Benefits</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+    </div>
+</header>
+
+<div class="banner">
+    <h1 class="banner-title">Sell More!</h1>
+    <p class="banner-text">Open shop on our platform and increase your sales</p>
+    <a class="banner-link" href="#">Open your shop</a>
+</div>
+
+<section class="container section1">
+    <h2 class="section1-title">The most popular sales platform in country</h2>
+    <div class="section1-content">
+        <article class="section1-article1">
+            <div class="section1-img-box"></div>
+            <span>100000+</span>
+            <p>daily entries</p>
+        </article>
+
+        <article class="section1-article2">
+            <div class="section1-img-box"></div>
+            <span>2000000+</span>
+            <p>seen products every day</p>
+        </article>
+
+        <article class="section1-article3">
+            <div class="section1-img-box"></div>
+            <span>10000+</span>
+            <p>added posts daily</p>
+        </article>
+    </div>
+</section>
+
 
 </body>
 </html>
