--- a/index.html
+++ b/index.html
@@ -39,34 +39,130 @@
     </div>
 </header>
 
-<div class="banner">
-    <h1 class="banner-title">Sell More!</h1>
-    <p class="banner-text">Open shop on our platform and increase your sales</p>
-    <a class="banner-link" href="#">Open your shop</a>
-</div>
+<section class="opening">
+
+    <div class="banner-content">
+        <h1 class="banner-title">Sell More!</h1>
+        <p class="banner-text">Open shop on our platform and increase your sales</p>
+        <a class="banner-link" href="#">Open your shop</a>
+        <img class="opening-img" src="/images/Background.png">
+    </div>
+
+</section>
 
 <section class="container section1">
     <h2 class="section1-title">The most popular sales platform in country</h2>
-    <div class="section1-content">
-        <article class="section1-article1">
-            <div class="section1-img-box"></div>
+    <div class="container section1-content">
+
+        <article class="section1-article section1-article1">
+            <div class="section1-img-box">
+                <div class="circle"><img class="section1-img person" src="images/Person.svg"></div>
+            </div>
             <span>100000+</span>
             <p>daily entries</p>
         </article>
 
-        <article class="section1-article2">
-            <div class="section1-img-box"></div>
+        <article class="section1-article section1-article2">
+            <div class="section1-img-box">
+                <div class="circle"><img class="section1-img eye" src="images/Eye.svg"></div>
+            </div>
             <span>2000000+</span>
             <p>seen products every day</p>
         </article>
 
-        <article class="section1-article3">
-            <div class="section1-img-box"></div>
+        <article class="section1-article section1-article3">
+            <div class="section1-img-box">
+                <div class="circle"><img class="section1-img catalog" src="images/Catalog.svg"></div>
+            </div>
             <span>10000+</span>
             <p>added posts daily</p>
         </article>
     </div>
 </section>
+
+<section class="benefits">
+
+    <article class="benefits-article benefits-article-1">
+        <div class="benefits-content">
+            <h3 class="benefits-header">Be always first</h3>
+            <p class="benefits-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <div class="rectangle"></div>
+        </div>
+        <div class="laptop">
+            <img src="./images/Macbook.png">
+        </div>
+
+    </article>
+
+    <article class="benefits-article benefits-article-2">
+        <div class="benefits-content">
+            <h3 class="benefits-header">Your shop is <br> where you are!</h3>
+            <p class="benefits-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <div class="rectangle"></div>
+        </div>
+        <div class="iphone">
+            <img src="./images/iPhone.png">
+        </div>
+    </article>
+
+    <article class="benefits-article benefits-article-3">
+        <div class="benefits-content">
+            <h3 class="benefits-header">Increase recognition <br> your brand!</h3>
+            <p class="benefits-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <div class="rectangle"></div>
+        </div>
+        <div class="trumpet">
+            <img src="./images/Trumpet.png">
+        </div>
+    </article>
+
+</section>
+
+<section class="pricing">
+    <h2 class="pricing-header">Pricing</h2>
+    <section class="pricing-container container">
+        <article class="pricing-article basic">
+            <h3 class="pricing-article-header">Basic</h3>
+            <p class="pricing-article-text">$0</p>
+            <ul class="pricing-article-list">
+                <li class="pricing-list-item">100 MB HDD</li>
+                <li class="pricing-list-item">1 Subdomain</li>
+                <li class="pricing-list-item">2 E-mails</li>
+                <li class="pricing-list-item">Two years license</li>
+                <li class="pricing-list-item">Full support</li>
+            </ul>
+            <a href="#" class="btn">Begin</a>
+        </article>
+
+        <article class="pricing-article professional">
+            <h3 class="pricing-article-header">Professional</h3>
+            <p class="pricing-article-text">$25</p>
+            <span>Limited offer</span>
+            <ul class="pricing-article-list">
+                <li class="pricing-list-item">100 MB HDD</li>
+                <li class="pricing-list-item">1 Subdomain</li>
+                <li class="pricing-list-item">2 E-mails</li>
+                <li class="pricing-list-item">Two years license</li>
+                <li class="pricing-list-item">Full support</li>
+            </ul>
+            <a href="#" class="btn">Begin</a>
+        </article>
+
+        <article class="pricing-article premium">
+            <h3 class="pricing-article-header">Premium</h3>
+            <p class="pricing-article-text">$60</p>
+            <span>Limited offer</span>
+            <ul class="pricing-article-list">
+                <li class="pricing-list-item">100 MB HDD</li>
+                <li class="pricing-list-item">1 Subdomain</li>
+                <li class="pricing-list-item">2 E-mails</li>
+                <li class="pricing-list-item">Two years license</li>
+                <li class="pricing-list-item">Full support</li>
+            </ul>
+            <a href="#" class="btn">Begin</a>
+        </article>
+    </section>
+</section> 
 
 
 </body>
